--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "email": "mehran.naseri2013@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.4"
+    }
 }
